src/test/ui/issues/issue-12187-2.stderr
error[E0282]: type annotations needed in `&T`
  --> $DIR/issue-12187-2.rs:6:10
   |
LL |     let &v = new();
   |         -^
   |         ||
   |         |cannot infer type
   |         consider giving this pattern the type `&T` with the type parameter `_` specified

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
